--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,252 @@
-.App {
+/* navbar.js */
+.banner{
+  height: 80px;
+  font-weight: bold;
+  width: 100%;
+  background-color:  rgb(10, 30, 40);
+  background-position: center;
+  background-size: cover;
+}
+/* /logo/ */
+.logo{
+   margin: 0px 0px;
+
+}
+.logo img{
+  margin-left:30px;
+  margin-top: 20px;
+  height:50px;
+   width:100px;
+}
+
+.nav{
+   display: flex;
+   align-items: center;
+   justify-content: right;
+   margin-right: 100px;
+   margin-top: -100px;
+   position:sticky;
+   top:0;  
+}
+.nav .active{
+  color: aliceblue;
+  text-decoration: none;
+  display: flex;
+    list-style: none;
+    margin-left: 20px;
+   font-size: 20px;
+   margin-top: 20px;
+}
+.nav button{
+  color:bisque;
+  background-color: black;
+  height: 30px;
+  font-size: 20px;
+  margin-top:10px;
+  margin-left:10px;
+  width: 100px;
+  border-color:bisque ;
+}
+@media screen and (max-width: 600px) {
+  .banner{
+    height: 300px;
+  }
+  .logo {
+    height: 80px;
+    margin-top: 50px;
+  }
+  .nav,.active ,.nav button {
+   flex-direction: column;
+ 
+  }
+}
+
+
+
+
+
+/* footer.js */
+
+.footer{
+  background-color: rgb(17, 49, 65);
+  width: 100%;
+  /* height: 300px; */
+
+}
+.top{
+  background-color: rgb(10, 30, 40);
+}
+.top2{
+  text-align: center;
+  color:rgb(250, 231, 195);
+  font-size: 150px;
+  margin-bottom: 10px;
+  margin-top: -3px;
+  }
+  
+  .h3{
+    text-align: center;
+    color: rgb(255, 255, 255);
+    margin-bottom: 20px;
+    margin-top: -100px;
+    font-size: 30px;
+  }
+  
+  .p2{
+    text-align: center;
+    color:rgb(255, 255, 255);
+    margin-bottom: 20px;
+    margin-top: 5px;
+  }
+  
+  h5{
+    padding: 10px;
+    width: 150px;
+    height: 20px;
+    color: rgb(250, 231, 195);
+    border: 2px solid rgb(250, 231, 195);
+    border-radius: 90px;
+    font-size: 20px;
+    margin: auto;
+    margin-bottom: 70px;
+  }
+  .ver{
+    margin-top: -50px;
+  }
+.vertical{
+  width: 1px;
+  border: 7px solid rgb(250, 231, 195);
+  border-radius: 100%;
+  margin-left: 595px;
+}
+.vl{
+  height: 100px;
+  border-left: 4px solid rgb(250, 231, 195);
+  margin-left: 600px;
+}
+
+.footer .fo1{
+  text-align: center;
+  color: white;
+  font-size: 20px;
+  margin-top: -30px;
+}
+.footer .row{
+  color: #fff;
+  width: 85%;
+  margin-left: 70px;
+ display: flex;
+ justify-content: space-between;
+}
+.footer .row .col1{
+  color: white;
+  font-size: 20px;
+}
+
+ .active{
+  color: white;
+  text-decoration: none;
+  display:flex;
+  font-size: 20px; 
+  margin: 10px;
+   
+}
+.footer .row .col2 {
+  font-size:20px ;
+}
+.footer .row2{
+  background-color: rgb(10, 30, 40);
+  margin-top: -5px;
+  color: white;
+  width: 100%; 
+  display: flex;
+  justify-content: space-between;
+  height: 60px;
+  
+}
+.footer .row2 img{
+  height: 30px;
+  width: 80px;
+  margin-left: 75px;
+  margin-top: 10px;
+}
+.footer .row2 .fa1{
+  
+  margin-top: 10px;
+  color: white;
+  font-size: 20px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.footer .fo2 .row2 .fa2{
   color: white;
+  font-size: 20px;
+  display: flex;
+  margin: -5px 30px;
+}
+.fo2 .row2 .fa2 p{
+  justify-content: space-between;
+  margin: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+/* @media screen and (max-width: 900px){
+  
+  .row {
+      flex-direction:column-reverse;
+  }
+  .row2 {
+    flex-direction: column;
+   height: 200px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+} */
+@media screen and (max-width: 600px){
+  .top2{
+    font-size: 50px;
   }
-  to {
-    transform: rotate(360deg);
+  .h3{
+    margin-top: -25px;
+    font-size: 20px;
   }
+  .p2{
+    font-size: 12px;
+  }
+  .top h5{
+    font-size: 12px;
+    height: 12px;
+    width: 100px;
+  }
+  .ver{
+    margin-top: -20px;
+  }
+  .vertical{
+    margin-left: 220px;
+    border: 4px solid rgb(250, 231, 195);
+  }
+  .vl{
+    margin-left: 223px;
+    height: 30px;
+    border-left: 2px solid rgb(250, 231, 195);
+  }
+  .fo2{
+    display: block;
+    height: 140px;
+    background-color: rgb(20, 27, 50);
+    text-align: center;
+  }
+  .fo2 .row2 img{
+    margin-left: 180px;
+  }
+  .fo2 .row2 .fa1{
+    font-size: 15px;
+  }
+  .fo2 .row2 .fa2{
+    justify-content: space-between;
+  }
+  .row{
+      flex-direction: column;
+  }
+  .row2{
+      
+    height: 200px;
+    flex-direction: column; 
+}
 }
